Product + Categoryのテスト固め
